--- a/js-sandbox/Cargo.toml
+++ b/js-sandbox/Cargo.toml
@@ -12,8 +12,8 @@ edition = "2021"
 readme = "../ReadMe.md"
 
 [dependencies]
-deno_web = "0.149.0"
 js-sandbox-macros = { path = "../js-sandbox-macros", version = "=0.2.0-rc.1" }
 deno_core = "0.209.0"
+deno_runtime = "0.126.0"
 serde_json = "1.0.106"
 serde = { version = "1.0.188", features = ["derive"] }
